--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "flatpickr": "^4.6.13",
     "lucide-react": "^0.554.0",
     "primeicons": "^7.0.0",
